--- a/styles/style.css
+++ b/styles/style.css
@@ -163,3 +163,19 @@ header {
     border-radius: 16px;
     background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
 }
+
+.video-block {
+    margin-top: 88px;
+}
+.yt-video {
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+    width: 1140px;
+    height: 614px;
+    margin: 0px auto;
+}
+iframe {
+    border-radius: 16px;
+    margin: 32px;
+}
